istio_ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2019-08-21T01:14:48Z"
  labels:
    app: istio-ingressgateway
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "1136060"
  selfLink: /api/v1/namespaces/istio-system/services/istio-ingressgateway
  uid: <change this>
spec:
  clusterIP: 10.100.160.108
  externalTrafficPolicy: Cluster
  ports:
  - name: status-port
    nodePort: 30906
    port: 15020
    protocol: TCP
    targetPort: 15020
  - name: http2
    nodePort: 31380
    port: 80
    protocol: TCP
    targetPort: 80
  - name: kcuser
    nodePort: 31410
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: https
    nodePort: 31390
    port: 443
    protocol: TCP
    targetPort: 443
  - name: tcp
    nodePort: 31400
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: https-kiali
    nodePort: 31131
    port: 15029
    protocol: TCP
    targetPort: 15029
  - name: https-prometheus
    nodePort: 31686
    port: 15030
    protocol: TCP
    targetPort: 15030
  - name: https-grafana
    nodePort: 30237
    port: 15031
    protocol: TCP
    targetPort: 15031
  - name: https-tracing
    nodePort: 31325
    port: 15032
    protocol: TCP
    targetPort: 15032
  - name: tls
    nodePort: 30934
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: <change this>
