k8s_deploy.yaml
# Copyright 2019 Trinh Nguyen <dangtrinhnt@gmail.com>
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# kcuser service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: kcuser
  labels:
    app: kcuser
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: kcuser
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kcuser
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kcuser
        version: v1
    spec:
      containers:
      - image: docker.io/dangtrinhnt/kcuser
        imagePullPolicy: IfNotPresent
        name: kcuser
        ports:
        - containerPort: 80
